<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/ground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">


            <ImageView
                android:id="@+id/weather"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ketqua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_0"
                android:textColor="#352D2A"
                android:textSize="@dimen/_60sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/board">

            <TextView
                android:id="@+id/ac"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomori"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/ac"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/nho"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/nho"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/chiadu"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/chiadu"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/chiahet"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/chiahet"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/first">

            <TextView
                android:id="@+id/bay"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_7"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tam"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_8"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/chin"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_9"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/nhan"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/sao"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/second">

            <TextView
                android:id="@+id/bon"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_4"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/nam"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_5"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/sau"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_6"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tru"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/tru"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/thirst">

            <TextView
                android:id="@+id/mot"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_1"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/hai"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_2"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/ba"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_3"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/cong"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomxam"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/cong"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/four">

            <TextView
                android:id="@+id/khong"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/_0"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/cham"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomwhite"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/cham"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/bang"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bottomori"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/bang"
                android:textColor="#352D2A"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>